test : 커뮤니티와 알림 테스트 코드 최신화